src/main/java/com/github/cronsmith/antlr/CronExpressionParser.java
/*
 * Copyright 2026 Fred Feng
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from CronExpression.g4 by ANTLR 4.13.1

package com.github.cronsmith.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CronExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, INT_YEAR=31, 
		INT=32, INT_L=33, SPACE=34;
	public static final int
		RULE_cron = 0, RULE_second = 1, RULE_minute = 2, RULE_hour = 3, RULE_dayOfMonth = 4, 
		RULE_month = 5, RULE_dayOfWeek = 6, RULE_year = 7, RULE_secondField = 8, 
		RULE_minuteField = 9, RULE_hourField = 10, RULE_dayOfMonthField = 11, 
		RULE_monthField = 12, RULE_dayOfWeekField = 13, RULE_yearField = 14, RULE_rangeWithStep = 15, 
		RULE_yearRangeWithStep = 16, RULE_range = 17, RULE_yearRange = 18, RULE_weekdayRangeWithStep = 19, 
		RULE_monthRangeWithStep = 20, RULE_dayOfWeekNameLast = 21, RULE_dayOfWeekNameWithStep = 22, 
		RULE_monthNameWithStep = 23, RULE_weekdayRange = 24, RULE_monthRange = 25, 
		RULE_dayOfWeekName = 26, RULE_monthName = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"cron", "second", "minute", "hour", "dayOfMonth", "month", "dayOfWeek", 
			"year", "secondField", "minuteField", "hourField", "dayOfMonthField", 
			"monthField", "dayOfWeekField", "yearField", "rangeWithStep", "yearRangeWithStep", 
			"range", "yearRange", "weekdayRangeWithStep", "monthRangeWithStep", "dayOfWeekNameLast", 
			"dayOfWeekNameWithStep", "monthNameWithStep", "weekdayRange", "monthRange", 
			"dayOfWeekName", "monthName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'*/'", "'/'", "'*'", "'-'", "'W'", "'LW'", "'?'", "'L'", 
			"'L-'", "'#'", "'SUN'", "'MON'", "'TUE'", "'WED'", "'THU'", "'FRI'", 
			"'SAT'", "'JAN'", "'FEB'", "'MAR'", "'APR'", "'MAY'", "'JUN'", "'JUL'", 
			"'AUG'", "'SEP'", "'OCT'", "'NOV'", "'DEC'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "INT_YEAR", "INT", "INT_L", 
			"SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CronExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CronExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CronContext extends ParserRuleContext {
		public SecondContext second() {
			return getRuleContext(SecondContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(CronExpressionParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(CronExpressionParser.SPACE, i);
		}
		public MinuteContext minute() {
			return getRuleContext(MinuteContext.class,0);
		}
		public HourContext hour() {
			return getRuleContext(HourContext.class,0);
		}
		public DayOfMonthContext dayOfMonth() {
			return getRuleContext(DayOfMonthContext.class,0);
		}
		public MonthContext month() {
			return getRuleContext(MonthContext.class,0);
		}
		public DayOfWeekContext dayOfWeek() {
			return getRuleContext(DayOfWeekContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CronExpressionParser.EOF, 0); }
		public YearContext year() {
			return getRuleContext(YearContext.class,0);
		}
		public CronContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cron; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterCron(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitCron(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitCron(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CronContext cron() throws RecognitionException {
		CronContext _localctx = new CronContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cron);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			second();
			setState(57);
			match(SPACE);
			setState(58);
			minute();
			setState(59);
			match(SPACE);
			setState(60);
			hour();
			setState(61);
			match(SPACE);
			setState(62);
			dayOfMonth();
			setState(63);
			match(SPACE);
			setState(64);
			month();
			setState(65);
			match(SPACE);
			setState(66);
			dayOfWeek();
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(67);
				match(SPACE);
				setState(68);
				year();
				}
				break;
			}
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(71);
				match(SPACE);
				}
			}

			setState(74);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecondContext extends ParserRuleContext {
		public List<SecondFieldContext> secondField() {
			return getRuleContexts(SecondFieldContext.class);
		}
		public SecondFieldContext secondField(int i) {
			return getRuleContext(SecondFieldContext.class,i);
		}
		public SecondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_second; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterSecond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitSecond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitSecond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SecondContext second() throws RecognitionException {
		SecondContext _localctx = new SecondContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_second);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			secondField();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(77);
				match(T__0);
				setState(78);
				secondField();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MinuteContext extends ParserRuleContext {
		public List<MinuteFieldContext> minuteField() {
			return getRuleContexts(MinuteFieldContext.class);
		}
		public MinuteFieldContext minuteField(int i) {
			return getRuleContext(MinuteFieldContext.class,i);
		}
		public MinuteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterMinute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitMinute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitMinute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MinuteContext minute() throws RecognitionException {
		MinuteContext _localctx = new MinuteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_minute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			minuteField();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(85);
				match(T__0);
				setState(86);
				minuteField();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HourContext extends ParserRuleContext {
		public List<HourFieldContext> hourField() {
			return getRuleContexts(HourFieldContext.class);
		}
		public HourFieldContext hourField(int i) {
			return getRuleContext(HourFieldContext.class,i);
		}
		public HourContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hour; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterHour(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitHour(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitHour(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HourContext hour() throws RecognitionException {
		HourContext _localctx = new HourContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_hour);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			hourField();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(93);
				match(T__0);
				setState(94);
				hourField();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DayOfMonthContext extends ParserRuleContext {
		public List<DayOfMonthFieldContext> dayOfMonthField() {
			return getRuleContexts(DayOfMonthFieldContext.class);
		}
		public DayOfMonthFieldContext dayOfMonthField(int i) {
			return getRuleContext(DayOfMonthFieldContext.class,i);
		}
		public DayOfMonthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dayOfMonth; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterDayOfMonth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitDayOfMonth(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitDayOfMonth(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DayOfMonthContext dayOfMonth() throws RecognitionException {
		DayOfMonthContext _localctx = new DayOfMonthContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dayOfMonth);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			dayOfMonthField();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(101);
				match(T__0);
				setState(102);
				dayOfMonthField();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MonthContext extends ParserRuleContext {
		public List<MonthFieldContext> monthField() {
			return getRuleContexts(MonthFieldContext.class);
		}
		public MonthFieldContext monthField(int i) {
			return getRuleContext(MonthFieldContext.class,i);
		}
		public MonthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_month; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterMonth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitMonth(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitMonth(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MonthContext month() throws RecognitionException {
		MonthContext _localctx = new MonthContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_month);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			monthField();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(109);
				match(T__0);
				setState(110);
				monthField();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DayOfWeekContext extends ParserRuleContext {
		public List<DayOfWeekFieldContext> dayOfWeekField() {
			return getRuleContexts(DayOfWeekFieldContext.class);
		}
		public DayOfWeekFieldContext dayOfWeekField(int i) {
			return getRuleContext(DayOfWeekFieldContext.class,i);
		}
		public DayOfWeekContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dayOfWeek; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterDayOfWeek(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitDayOfWeek(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitDayOfWeek(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DayOfWeekContext dayOfWeek() throws RecognitionException {
		DayOfWeekContext _localctx = new DayOfWeekContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dayOfWeek);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			dayOfWeekField();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(117);
				match(T__0);
				setState(118);
				dayOfWeekField();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class YearContext extends ParserRuleContext {
		public List<YearFieldContext> yearField() {
			return getRuleContexts(YearFieldContext.class);
		}
		public YearFieldContext yearField(int i) {
			return getRuleContext(YearFieldContext.class,i);
		}
		public YearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_year; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterYear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitYear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitYear(this);
			else return visitor.visitChildren(this);
		}
	}

	public final YearContext year() throws RecognitionException {
		YearContext _localctx = new YearContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_year);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			yearField();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(125);
				match(T__0);
				setState(126);
				yearField();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecondFieldContext extends ParserRuleContext {
		public RangeWithStepContext rangeWithStep() {
			return getRuleContext(RangeWithStepContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(CronExpressionParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CronExpressionParser.INT, i);
		}
		public SecondFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secondField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterSecondField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitSecondField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitSecondField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SecondFieldContext secondField() throws RecognitionException {
		SecondFieldContext _localctx = new SecondFieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_secondField);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				rangeWithStep();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				range();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				match(T__1);
				setState(135);
				match(INT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				match(INT);
				setState(137);
				match(T__2);
				setState(138);
				match(INT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(139);
				match(T__3);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(140);
				match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MinuteFieldContext extends ParserRuleContext {
		public RangeWithStepContext rangeWithStep() {
			return getRuleContext(RangeWithStepContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(CronExpressionParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CronExpressionParser.INT, i);
		}
		public MinuteFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minuteField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterMinuteField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitMinuteField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitMinuteField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MinuteFieldContext minuteField() throws RecognitionException {
		MinuteFieldContext _localctx = new MinuteFieldContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_minuteField);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				rangeWithStep();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				range();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				match(T__1);
				setState(146);
				match(INT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(147);
				match(INT);
				setState(148);
				match(T__2);
				setState(149);
				match(INT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(150);
				match(T__3);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(151);
				match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HourFieldContext extends ParserRuleContext {
		public RangeWithStepContext rangeWithStep() {
			return getRuleContext(RangeWithStepContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(CronExpressionParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CronExpressionParser.INT, i);
		}
		public HourFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hourField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterHourField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitHourField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitHourField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HourFieldContext hourField() throws RecognitionException {
		HourFieldContext _localctx = new HourFieldContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_hourField);
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				rangeWithStep();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				range();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				match(T__1);
				setState(157);
				match(INT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				match(INT);
				setState(159);
				match(T__2);
				setState(160);
				match(INT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(161);
				match(T__3);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(162);
				match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DayOfMonthFieldContext extends ParserRuleContext {
		public RangeWithStepContext rangeWithStep() {
			return getRuleContext(RangeWithStepContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(CronExpressionParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CronExpressionParser.INT, i);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public DayOfMonthFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dayOfMonthField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).enterDayOfMonthField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronExpressionListener ) ((CronExpressionListener)listener).exitDayOfMonthField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CronExpressionVisitor ) return ((CronExpressionVisitor<? extends T>)visitor).visitDayOfMonthField(this);
			else return visitor.visitChildren(this);
		}
	}
